test/e2e/testdata/ratelimit-global-shared-and-unshared-header-match.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ratelimit-global-merge
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http-8080
      protocol: HTTP
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: header-ratelimit-1
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: ratelimit-global-merge
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /foo
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: header-ratelimit-2
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: ratelimit-global-merge
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /bar
      backendRefs:
        - name: infra-backend-v2
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-headers-route-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: header-ratelimit-1
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: header-ratelimit-2
  mergeType: StrategicMerge
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - headers:
                - name: x-user-id
                  value: one
          limit:
            requests: 3
            unit: Hour
          shared: true
        - clientSelectors:
            - headers:
                - name: x-user-id
                  value: two
          limit:
            requests: 3
            unit: Hour
          shared: false
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-headers-gateway-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ratelimit-global-merge
  rateLimit:
    type: Global
    global:
      rules:
        - limit:
            requests: 100
            unit: Hour
          shared: true
        - clientSelectors:
            - headers:
                - name: x-user-id
                  value: three
          limit:
            requests: 3
            unit: Hour
          shared: true
        - clientSelectors:
            - headers:
                - name: x-user-id
                  value: four
          limit:
            requests: 3
            unit: Hour
          shared: false
